@@ -533,12 +533,14 @@ namespace __debug
 
   template<typename _InputIterator,
 	   typename _Hash =
-	   hash<typename iterator_traits<_InputIterator>::value_type>,
+	     hash<typename iterator_traits<_InputIterator>::value_type>,
 	   typename _Pred =
-	   equal_to<typename iterator_traits<_InputIterator>::value_type>,
+	     equal_to<typename iterator_traits<_InputIterator>::value_type>,
 	   typename _Allocator =
-	   allocator<typename iterator_traits<_InputIterator>::value_type>,
+	     allocator<typename iterator_traits<_InputIterator>::value_type>,
 	   typename = _RequireInputIter<_InputIterator>,
+	   typename = _RequireNotAllocatorOrIntegral<_Hash>,
+	   typename = _RequireNotAllocator<_Pred>,
 	   typename = _RequireAllocator<_Allocator>>
     unordered_set(_InputIterator, _InputIterator,
 		  unordered_set<int>::size_type = {},
@@ -549,6 +551,8 @@ namespace __debug
   template<typename _Tp, typename _Hash = hash<_Tp>,
 	   typename _Pred = equal_to<_Tp>,
 	   typename _Allocator = allocator<_Tp>,
+	   typename = _RequireNotAllocatorOrIntegral<_Hash>,
+	   typename = _RequireNotAllocator<_Pred>,
 	   typename = _RequireAllocator<_Allocator>>
     unordered_set(initializer_list<_Tp>,
 		  unordered_set<int>::size_type = {},
@@ -569,6 +573,7 @@ namespace __debug
 
   template<typename _InputIterator, typename _Hash, typename _Allocator,
 	   typename = _RequireInputIter<_InputIterator>,
+	   typename = _RequireNotAllocatorOrIntegral<_Hash>,
 	   typename = _RequireAllocator<_Allocator>>
     unordered_set(_InputIterator, _InputIterator,
 		  unordered_set<int>::size_type,
@@ -586,6 +591,7 @@ namespace __debug
     -> unordered_set<_Tp, hash<_Tp>, equal_to<_Tp>, _Allocator>;
 
   template<typename _Tp, typename _Hash, typename _Allocator,
+	   typename = _RequireNotAllocatorOrIntegral<_Hash>,
 	   typename = _RequireAllocator<_Allocator>>
     unordered_set(initializer_list<_Tp>,
 		  unordered_set<int>::size_type, _Hash, _Allocator)
@@ -1087,12 +1093,14 @@ namespace __debug
 
   template<typename _InputIterator,
 	   typename _Hash =
-	   hash<typename iterator_traits<_InputIterator>::value_type>,
+	     hash<typename iterator_traits<_InputIterator>::value_type>,
 	   typename _Pred =
-	   equal_to<typename iterator_traits<_InputIterator>::value_type>,
+	     equal_to<typename iterator_traits<_InputIterator>::value_type>,
 	   typename _Allocator =
-	   allocator<typename iterator_traits<_InputIterator>::value_type>,
+	     allocator<typename iterator_traits<_InputIterator>::value_type>,
 	   typename = _RequireInputIter<_InputIterator>,
+	   typename = _RequireNotAllocatorOrIntegral<_Hash>,
+	   typename = _RequireNotAllocator<_Pred>,
 	   typename = _RequireAllocator<_Allocator>>
     unordered_multiset(_InputIterator, _InputIterator,
 		       unordered_multiset<int>::size_type = {},
@@ -1104,6 +1112,8 @@ namespace __debug
   template<typename _Tp, typename _Hash = hash<_Tp>,
 	   typename _Pred = equal_to<_Tp>,
 	   typename _Allocator = allocator<_Tp>,
+	   typename = _RequireNotAllocatorOrIntegral<_Hash>,
+	   typename = _RequireNotAllocator<_Pred>,
 	   typename = _RequireAllocator<_Allocator>>
     unordered_multiset(initializer_list<_Tp>,
 		       unordered_multiset<int>::size_type = {},
@@ -1125,6 +1135,7 @@ namespace __debug
 
   template<typename _InputIterator, typename _Hash, typename _Allocator,
 	   typename = _RequireInputIter<_InputIterator>,
+	   typename = _RequireNotAllocatorOrIntegral<_Hash>,
 	   typename = _RequireAllocator<_Allocator>>
     unordered_multiset(_InputIterator, _InputIterator,
 		       unordered_multiset<int>::size_type,
@@ -1144,6 +1155,7 @@ namespace __debug
     -> unordered_multiset<_Tp, hash<_Tp>, equal_to<_Tp>, _Allocator>;
 
   template<typename _Tp, typename _Hash, typename _Allocator,
+	   typename = _RequireNotAllocatorOrIntegral<_Hash>,
 	   typename = _RequireAllocator<_Allocator>>
     unordered_multiset(initializer_list<_Tp>,
 		       unordered_multiset<int>::size_type, _Hash, _Allocator)
